--- a/src/App.css
+++ b/src/App.css
@@ -38,23 +38,22 @@
 }
 .bubble_wrap {
   position: absolute;
-  width: auto;
-  height: auto;
-  background: #f8f7f9;
+  width: 20px;
+  height: 20px;
   border-radius: 5px;
   padding: 2px 7px;
   font-size: 0.8rem;
-  color: #1334ab;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.bubble_location {
-  margin-bottom: 3px;
+.bubble_wrap img {
+  width: 100%;
+  height: 100%;
 }
 
-.bubble_today_count {
-  margin-bottom: 3px;
+.test {
+  font-size: 10px;
 }
