--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,11 @@
   height: 100%;
 }
 
-.test {
-  font-size: 10px;
+.place_name {
+  font-size: 12px;
+}
+
+.place_name_color {
+  font-size: 12px;
+  color: #75d3d1;
 }
